--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="particles-js"></div>
       <div class="user_info">
         <h1 class="user_name">Vaibhav Deep</h1>
-        <p>Full Stack Web Developer & Programmer</p>
+        <p>Software Developer | Web Developer</p>
         
         <a
         href="mailto:vdeep319@gmail.com"
@@ -33,7 +33,7 @@
       </div>
       
       <div class="user_img">
-        <img src="images/profile-img.jpeg" title="Hey! It's me, Vaibhav Deep" alt="" />
+        <img src="images/profile-img.jpg" title="Hey! It's me, Vaibhav Deep" alt="" />
       </div>
     </section>
 
@@ -42,11 +42,10 @@
     <div class="center">
       <h1 class="about_heading">About</h1>
       <p>
-        Hello! My name is Vaibhav Deep, and I'm a Full Stack Web Developer and a Programmer.
-         I have a diverse set of skills Web Development, Programming, Data Structures & Algorithms, and ECE technical skills.
-
+        Hello! My name is Vaibhav Deep, and I'm a Software developer at Samsung R&D Institute Noida. 
+        I have a diverse skill set in web development, competitive coding, data structures & algorithms, and ECE technical skills. 
       </p>
-      <a href="files/Vaibhav-Deep_Resume.pdf" class="btn" download="Resume">Download CV</a>
+      <a href="files/Vaibhav_Deep_Resume.pdf" class="btn" download="Resume">Download CV</a>
     </div>
         <img src="images/work.svg"  alt="img.png">
     </section>
@@ -104,6 +103,14 @@
           <p>Materialize</p>
         </div>
         <div class="box">
+          <i class="fab fa-java fa-4x" style="color:#f7a07e"></i>
+          <p>Java</p>
+        </div>
+        <div class="box">
+          <i class="fab fa-android fa-4x" style="color:#a4c639""></i>
+          <p>Android</p>
+        </div>
+        <div class="box">
           <i class="fas fa-database fa-4x" style="color:#589636"></i>
           <p>Databases</p>
         </div>
@@ -123,6 +130,10 @@
         <div class="box">
           <i class="fas fa-terminal fa-4x" style="color:#23A3EA"></i>
           <p>VS Code</p>
+        </div>
+        <div class="box">
+          <i class="fas fa-globe fa-4x" style="color:#ff4415"></i>
+          <p>Google Collab</p>
         </div>
         <div class="box">
           <i class="fas fa-wave-square fa-4x" style="color:#872757"></i>
@@ -176,6 +187,26 @@
                 href="https://github.com/vaibhavdeep319/merchant-desktop-app"
                 target="_blank_"
                 >Github Repo<i class="fas fa-arrow-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="main_box center">
+          <div class="icon center">
+            <i class="fas fa-plus"></i>
+          </div>
+          <div class="box">
+            <h1>Epilepsy Detection</h1>
+            <p>
+              M.Tech Dissertation on Epilepsy detection using SVM-2K algorithm, an approach 
+              that utilizes both views of dataset in detection of epilepsy. Average acuracy for classifiation was 97.46%.
+            </p>
+            <div class="links">
+              <a
+                href="#"
+                target="_blank_"
+                >View Dissertation<i class="fas fa-arrow-right"></i
               ></a>
             </div>
           </div>
@@ -278,7 +309,7 @@
             <img class="slides-img" src="images/certificate.svg">
             <h2 class="heading">Certifications</h2>
               <p class="slide-description">Have completed several certification courses from Udemy, Coursera, and Sololearn 
-                that include different Web Development technologies, tools, 
+                that include different Web & android Development technologies, tools, 
                 Programming languages, and Data structures & Algorithms.<br>
                  <div class="links2" style="margin-top: 16px;">
                   <a 
